[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Recap.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/theme.tres" type="Theme" id=5]
[ext_resource path="res://music/end_music.ogg" type="AudioStream" id=7]

[node name="Recap" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943848
margin_top = -0.943878
margin_right = -0.943848
margin_bottom = -0.943848
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="MenuTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 69.0
margin_right = 152.0
margin_bottom = 133.0
grow_horizontal = 2
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Game Over"
align = 1

[node name="UndoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.056
margin_top = 625.0
margin_right = -88.056
margin_bottom = 651.0
grow_horizontal = 2
theme = ExtResource( 5 )
text = "Undo Last Move"

[node name="FreeplayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 625.0
margin_right = 60.0
margin_bottom = 651.0
theme = ExtResource( 5 )
text = "Freeplay"

[node name="TitleScreenButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 88.0
margin_top = 625.0
margin_right = 216.0
margin_bottom = 651.0
theme = ExtResource( 5 )
text = "Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="FreeplayButton" to="." method="_on_FreeplayButton_pressed"]
[connection signal="pressed" from="TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
